--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -25,6 +25,7 @@
         <div class="job">
           <h3>{{ job.title }}</h3>
           <p>{{ job.company }} • {{ job.location }}</p>
+           <p><b>Eligible:</b> {{ job.eligible }}</p>
           <a href="{{ url_for('application', job_id=job.id) }}" class="btn">Apply Now</a>
         </div>
       {% endfor %}
